--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                   </div>
                 </div>
               </div> -->
-              <div class="card management">
+              <div class="card consumption-card">
                 <div class="card-body">
                   <button class="refresh">
                     <img src="assets/media/icons/icon-process.svg" alt="">
