--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                   </div>
                 </div>
               </div>
-              <!--  <div class="card management">
+              <div class="card management">
                 <div class="card-body">
                   <button class="refresh">
                     <img src="assets/media/icons/icon-process.svg" alt="">
@@ -398,7 +398,7 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
               <div class="card consumption-card">
                 <div class="card-body">
                   <button class="refresh">
